# demo-site

./: .gitignore  gulpfile.js  package.json
app/: Cargo.toml  Config.toml
app/src/: lib.rs  main.rs  router.rs
app/src/controllers/: mod.rs
app/src/models/: mod.rs
app/src/server/: config.rs  controller.rs  db.rs  middleware.rs  mod.rs  router.rs
app/tests/: lib.rs
app/views/: error.hbs  index.hbs  index.tpl  login.hbs  login.tpl  template.tpl
app/views/partial/: header.hbs  header.tpl  topbar.hbs  topbar.tpl
assets/: gulpfile.js  karma.conf.js  package.json  webpack.config.js
assets/sass/: app.scss  login.scss  test.scss
assets/sass/components/: nprogress.scss
assets/scripts/: app.js  main-login.js  test.js
assets/scripts/src/: index.entry.js  login.entry.js  main-app.js  main-login.js  main-mtest.js  page1.entry.js  page2.entry.js  page3.entry.js
assets/scripts/src/common/: http.js  topbar.vue
assets/scripts/src/index/: a.js  comp.vue  topbar.vue
assets/scripts/src/login/: app.js  app.vue  service.js  store.js
assets/scripts/src/mtest/: b.js
assets/scripts/src/page1/: comp.vue
assets/scripts/test/: spec-login.js  test.js
assets/scripts/test/fixtures/: test.html
src/: main.rs
views/: template.tpl
